:safety_vest: Add for_each rule
for_each enforces that traditional for loops be used instead of forEach
for readability purposes.

--- a/Linting/.swiftlint.base.yml
+++ b/Linting/.swiftlint.base.yml
@@ -57,3 +57,8 @@ custom_rules:
       - comment
     message: "There is no god, only Obel."
     severity: warning
+  for_each:
+    name: "Prefer For Loops"
+    regex: "(.forEach\\s?[\\{\\(])"
+    message: "Use a for loop instead of forEach to iterate."
+    severity: warning
